[gd_scene load_steps=4 format=2]

[ext_resource path="res://EventSelectionInterface.gd" type="Script" id=1]
[ext_resource path="res://SortMenu.gd" type="Script" id=2]
[ext_resource path="res://icons/sort-alpha-down.svg" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.0627451, 0.12549, 1 )

[node name="VBC" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SearchBar" type="HBoxContainer" parent="Background/VBC"]
margin_right = 1366.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Background/VBC/SearchBar"]
margin_top = 5.0
margin_right = 96.0
margin_bottom = 19.0
hint_tooltip = "Press enter after entering search term in order to filter events by search term."
mouse_filter = 1
text = " Search Events:"

[node name="LineEdit" type="LineEdit" parent="Background/VBC/SearchBar"]
margin_left = 100.0
margin_right = 1366.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
hint_tooltip = "Press enter after entering search term in order to filter events by search term."
size_flags_horizontal = 3
placeholder_text = "Enter search term"

[node name="SortBar" type="HBoxContainer" parent="Background/VBC"]
margin_top = 28.0
margin_right = 1366.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="Background/VBC/SortBar"]
margin_top = 8.0
margin_right = 52.0
margin_bottom = 22.0
text = " Sort by:"

[node name="SortMenu" type="OptionButton" parent="Background/VBC/SortBar"]
margin_left = 56.0
margin_right = 85.0
margin_bottom = 30.0
script = ExtResource( 2 )

[node name="ToggleReverseButton" type="Button" parent="Background/VBC/SortBar"]
margin_left = 89.0
margin_right = 125.0
margin_bottom = 30.0
toggle_mode = true
icon = ExtResource( 3 )

[node name="EventTree" type="Tree" parent="Background/VBC"]
margin_top = 62.0
margin_right = 1366.0
margin_bottom = 706.0
rect_min_size = Vector2( 256, 128 )
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="NegatedCheckBox" type="CheckBox" parent="Background/VBC"]
margin_top = 710.0
margin_right = 1366.0
margin_bottom = 734.0
text = "Negated"

[connection signal="text_entered" from="Background/VBC/SearchBar/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="item_selected" from="Background/VBC/SortBar/SortMenu" to="." method="_on_SortMenu_item_selected"]
[connection signal="toggled" from="Background/VBC/SortBar/ToggleReverseButton" to="." method="_on_ToggleReverseButton_toggled"]
[connection signal="item_activated" from="Background/VBC/EventTree" to="." method="_on_EventTree_item_activated"]
[connection signal="item_selected" from="Background/VBC/EventTree" to="." method="_on_EventTree_item_selected"]
[connection signal="pressed" from="Background/VBC/NegatedCheckBox" to="." method="_on_NegatedCheckBox_pressed"]
